@@ -39,20 +39,21 @@
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
         "6",
-	"7"
+        "7"
       ]
     },
     {
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
-	"6",
-        "7"
+        "6",
+        "7",
+        "8"
       ]
     },
     {
       "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
-	"6",
+        "6",
         "7"
       ]
     }
